Fix alignment of checkbox to drop multiple schedules of pgAgent job. Fixes #3946

--- a/web/pgadmin/static/scss/_pgadmin.style.scss
+++ b/web/pgadmin/static/scss/_pgadmin.style.scss
@@ -589,6 +589,7 @@ fieldset.inline-fieldset > div {
     margin-right: 9px;
 }
 
+.width_percent_3 { width: 3%; }
 .width_percent_5 { width: 5%; }
 .width_percent_10 { width: 10%; }
 .width_percent_15 { width: 15%; }
